profilelist1exp/unpackaged/objects/Sales_Tool_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IF this checkbox checked that means it is used in Sales Tool Utility Bar</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAdmin__c</fullName>
        <formula>$Permission.Carousel_Admin</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAdmin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Persona__c</fullName>
        <formula>IF(ISPICKVAL($User.User_Persona__c, &apos;SysAdmin&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;SysAdmin&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;Chatter&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;Chatter&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;Enterprise AE&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;Enterprise AE&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;Presales&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;Presales&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;DPS&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;DPS&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;MDC&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;MDC&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;UDS&apos;) &amp;&amp; INCLUDES(Salestool_Persona__c, &apos;UDS&apos;),true,
IF(ISPICKVAL($User.User_Persona__c, &apos;&apos;) &amp;&amp;  ISBLANK(Salestool_Persona__c),true,
IF(ISBLANK(Salestool_Persona__c),true,
IF(ISNULL(Salestool_Persona__c),true,
IF(ISNULL(TEXT($User.User_Persona__c)) &amp;&amp; ISNULL(Salestool_Persona__c),true,false)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualified Persona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tool_URL__c</fullName>
        <formula>HYPERLINK(Tool_URL__c,  Name, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tool URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salestool_Persona__c</fullName>
        <label>Persona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Persona_Value_Sets</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tool_URL__c</fullName>
        <label>Tool URL</label>
        <type>Url</type>
    </fields>
    <label>Sales Tool Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Salestool_Persona__c</columns>
        <columns>Tool_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsAdmin__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Persona</fullName>
        <columns>Sales_Tool_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Qualified_Persona__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Persona</label>
    </listViews>
    <nameField>
        <label>Sales Tool Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Tool Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>